[fix] z-index on dropdown photographer's page;

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -79,7 +79,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.25);
-  z-index: 2;
+  z-index: 15;
   padding: 69px 0;
 }
 
